--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,106 @@
+absl-py==1.4.0
 accelerate==0.19.0
-async-generator==1.10
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
 attrs==23.1.0
+beautifulsoup4==4.12.2
+boto3==1.26.146
+botocore==1.29.146
+bpemb==0.3.4
+bs4==0.0.1
 certifi==2023.5.7
+cffi==1.15.1
 charset-normalizer==3.1.0
-et-xmlfile==1.1.0
-exceptiongroup==1.1.1
+cloudpickle==2.2.1
+conllu==4.5.2
+contourpy==1.0.7
+cycler==0.11.0
+datasets==2.12.0
+Deprecated==1.2.14
+dill==0.3.6
+easyocr==1.7.0
 filelock==3.12.0
+flair==0.12.2
+flatbuffers==23.5.26
+fonttools==4.39.4
+frozenlist==1.3.3
 fsspec==2023.5.0
-h11==0.14.0
+ftfy==6.1.1
+future==0.18.3
+gdown==4.4.0
+gensim==4.3.1
 huggingface-hub==0.15.1
+hyperopt==0.2.7
 idna==3.4
+imageio==2.30.0
+Janome==0.4.2
+jmespath==1.0.1
 joblib==1.2.0
+kiwisolver==1.4.4
+langdetect==1.0.9
+lazy_loader==0.2
+lxml==4.9.2
+matplotlib==3.7.1
+mediapipe==0.10.0
+more-itertools==9.1.0
+mpld3==0.3
+multidict==6.0.4
+multiprocess==0.70.14
+networkx==3.1
+ninja==1.11.1
 numpy==1.24.3
-openpyxl==3.1.2
-outcome==1.2.0
+opencv-contrib-python==4.7.0.72
+opencv-python==4.7.0.72
+opencv-python-headless==4.7.0.72
 packaging==23.1
 pandas==2.0.2
 Pillow==9.5.0
+pptree==3.1
+protobuf==3.20.2
 psutil==5.9.5
+py4j==0.10.9.7
+pyarrow==12.0.0
+pyclipper==1.3.0.post4
+pycparser==2.21
+pyparsing==3.0.9
 PySocks==1.7.1
+python-bidi==0.4.2
 python-dateutil==2.8.2
-python-dotenv==1.0.0
+pytorch_revgrad==0.2.0
 pytz==2023.3
+PyWavelets==1.4.1
 PyYAML==6.0
 regex==2023.5.5
 requests==2.31.0
+responses==0.18.0
+s3transfer==0.6.1
+scikit-image==0.21.0
 scikit-learn==1.2.2
 scipy==1.10.1
-selenium==4.9.1
+segtok==1.5.11
+sentencepiece==0.1.99
+shapely==2.0.1
 six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
+smart-open==6.3.0
+sounddevice==0.4.6
+soupsieve==2.4.1
+sqlitedict==2.1.0
+tabulate==0.9.0
 threadpoolctl==3.1.0
+tifffile==2023.4.12
 tokenizers==0.13.3
 torch==1.13.1+cu116
 torchaudio==0.13.1+cu116
 torchvision==0.14.1+cu116
 tqdm==4.65.0
+transformer-smaller-training-vocab==0.2.4
 transformers==4.29.2
-trio==0.22.0
-trio-websocket==0.10.2
 typing_extensions==4.6.3
 tzdata==2023.3
-urllib3==2.0.2
-webdriver-manager==3.8.6
-wsproto==1.2.0
+urllib3==1.26.16
+wcwidth==0.2.6
+Wikipedia-API==0.5.8
+wrapt==1.15.0
+xxhash==3.2.0
+yarl==1.9.2
